<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="hello">Hello World, EngineerMode!</string>
	<string name="app_name">EngineerMode</string>
	<string name="internal_app_name">InternalEngineerMode</string>
	<string name="Settings">Settings</string>
	<string name="BatteryLog">BatteryLog</string>
	<string name="Log_Record_Interval">Interval Of Info Record [1-100]:</string>
	<string name="battery_info_Log">Battery Info Record:</string>
	<string name="battery_info_Log_Start">Start</string>
	<string name="battery_info_Log_End">Stop</string>
	<string name="battery_info_10">10</string>
	<string name="battery_info_s">s</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="GPRS">GPRS</string>
    <string name="SIM1">SIM1</string>
    <string name="SIM2">SIM2</string>
    <string name="IMEI">Write IMEI</string>
    <string name="DefSIMText">Default SIM Setting</string>
    <string name="SIM1_ENABLED">SIM1 Enabled</string>
    <string name="SIM2_ENABLED">SIM2 Enabled</string>
    <string name="default_sim1">Default SIM1</string>
    <string name="default_sim2">Default SIM2</string>
    <string name="GPRS_Attached">Attached</string>
    <string name="GPRS_Detached">Detached</string>
    <string name="GPRS_FD">Send FD</string>
    <string name="GPRS_ConfigFD">Config SCRI/FD</string>
    <string name="GPRS_1st_PDP">1st PDP</string>
    <string name="GPRS_2nd_PDP">2nd PDP</string>
    <string name="GPRS_As_Primary">As Primary</string>
    <string name="GPRS_As_Secondary">As Secondary</string>
    <string name="GPRS_Activate_PDP">Activate PDP</string>
    <string name="GPRS_Deactivate_PDP">Deactivate PDP</string>
    <string name="GPRS_1000">1000</string>
    <string name="GPRS_Send_Data">Send Data</string>
    <string name="GPRS_FD_SCREEN_ON">Set FD timer for screen on</string>
    <string name="GPRS_FD_SCREEN_OFF">Set FD timer for screen off</string>
    <string name="GPRS_ALWAYS_ATTACH">Always Attach</string>
    <string name="GPRS_WHEN_NEEDED">When Needed</string>
    <string name="GPRS_ALWAYS_ATTACH_CONTINUE">Always Attach Continue</string>
    <string name="GPRS_WHEN_NEEDED_CONTINUE">When Needed Continue</string>
    <string name="GPRS_CANCEL_SPECIFY">Not to Specify</string>
    <string name="TouchScreen">TouchScreen</string>
    <string name="TouchScreen_HandWriting">TouchScreen_HandWriting</string>
    <string name="TouchScreen_Verification">TouchScreen_Verification</string>
    <string name="TouchScreen_VerificationPoint">TouchScreen_VerificationPoint</string>
    <string name="TouchScreen_VerificationLine">TouchScreen_VerificationLine</string>
    <string name="TouchScreen_VerificationShaking">TouchScreen_VerificationShaking</string>
    <string name="TouchScreen_MultiTouch">TouchScreen_MultiTouch</string>
    <string name="TouchScreen_Settings_TextValue">The value</string>
    <string name="TouchScreen_Settings_TextSpinner">Category</string>
    <string name="TouchScreen_Settings_TextSet">Set</string>
    <string name="TouchScreen_Settings">Settings</string>
    <string name="TouchScreen_Settings_Value">0</string>
    <string name="TouchScreen_Settings_sdcard">OFF</string>
    <string name="TouchScreen_Settings_uart">OFF</string>
    <string name="TouchScreen_Settings_TextUart">Enable Uart Log</string>
    <string name="TouchScreen_Settings_TextSDcard">Enable SD card Log</string>
    <string name="Display">Display</string>
    <string name="Display_lcd_Text">Back Light</string>
    <string name="Display_lcd_on">LCD ON</string>
    <string name="Display_lcd_off">LCD OFF</string>
    <string name="Display_lcm_Text">LCM Controller</string>
    <string name="Display_lcm_on">LCM ON</string>
    <string name="Display_lcm_off">LCM OFF</string>
    <string name="Display_set_Text">PWM duty: 0~63</string>
    <string name="Display_set">Set</string>
    <string name="Display_Edit_Value">0</string>
    <string name="Memory">Memory</string>
    <string name="NAND_Flash">Flash</string>
    <string name="EMI_Register">EMI_Register</string>
    <string name="comm_info">Common Info</string>
    <string name="file_sys_info">File System Info</string>
    <string name="partition_info">Partition Info</string>
    <string name="Power">Power</string>
    <string name="PMU">PMU</string>
    <string name="ChargeBattery">ChargeBattery</string>
    <string name="pmu_btn_get">Get</string>
    <string name="pmu_btn_set">Set</string>
     <string name="address_text">Address[Hex input:Fz0xxxxx]-> [z00xxxxx]</string>
     <string name="address6575_text">Address[Hex 00-FF]</string>
    <string name="warning_text">WARNING: Wrong set may cause system error.</string>
    <string name="value_text">Value</string>
    <string name="value6575_text">Value[Hex 00-FF]</string>
    <string name="pmu_info_text">PMU Info</string>
    <string name="pmu_reg">PMU Register</string>
    <string name="battery_charge_info_text">N</string>
    <string name="IO">IO</string>
    <string name="EINT">EINT</string>
    <string name="GPIO">GPIO</string>
    <string name="New_MSDC">MSDC</string>
    <string name="MSDC">MSDC</string>
    <string name="MSDC_Get">Get</string>
    <string name="MSDC_Set">Set</string>
    <string name="NEW_MSDC_Get">Get</string>
   <string name="NEW_MSDC_Set">Set</string>
    <string name="MSDC_Current_cmd_spininer">Data current</string>
    <string name="NEW_MSDC_CLK_PU">Clk pu</string>
    <string name="NEW_MSDC_CLK_PD">Clk pd</string>
    <string name="NEW_MSDC_CMD_PU">Cmd pu</string>
    <string name="NEW_MSDC_CMD_PD">Cmd pd</string>
    <string name="Audio">Audio</string>
    <string name="Audio_DebugInfo_ParameterText">Please choose the parameter:</string>
    <string name="Audio_DebugInfo_ValueText">Please input the value:</string>
    <string name="Audio_DebugInfo_EditText">0</string>
    <string name="Audio_DebugInfo_Button">Set</string>
    <string name="Camera">Camera</string>
    <string name="WiFi">WiFi</string>
    <string name="NetworkInfo">NetworkInfo</string>
    <string name="NetworkInfo_Cell">RR Cell Sel</string>
    <string name="NetworkInfo_Ch">RR Ch Dscr</string>
    <string name="NetworkInfo_Ctrl">RR Ctrl chan</string>
    <string name="NetworkInfo_RACH">RR RACH Ctrl</string>
    <string name="NetworkInfo_LAI">RR LAI Info</string>
    <string name="NetworkInfo_Radio">RR Radio Link</string>
    <string name="NetworkInfo_Meas">RR Meas Rep</string>
    <string name="NetworkInfo_Ca">RR Ca List</string>
    <string name="NetworkInfo_Control">RR Control Msg</string>
    <string name="NetworkInfo_SI2Q">RR SI2Q Info</string>
    <string name="NetworkInfo_MI">RR MI Info</string>
    <string name="NetworkInfo_BLK">RR BLK Info</string>
    <string name="NetworkInfo_TBF">RR TBF Info</string>
    <string name="NetworkInfo_GPRS">RR GPRS Gen</string>
    <string name="NetworkInfo_3GMmEmInfo">3GMmEmInfo</string>
    <string name="NetworkInfo_3GTcmMmiEmInfo">3GTcmMmiEmInfo</string>
    <string name="NetworkInfo_3GCsceEMServCellSStatusInd">3GCsceEMServCellSStatusInd</string>
    <string name="NetworkInfo_3GCsceEmInfoMultiPlmn">3GCsceEmInfoMultiPlmn</string>
    <string name="NetworkInfo_3GMemeEmInfoUmtsCellStatus">3GMemeEmInfoUmtsCellStatus</string>
    <string name="NetworkInfo_3GMemeEmPeriodicBlerReportInd">3GMemeEmPeriodicBlerReportInd</string>
    <string name="NetworkInfo_3GUrrUmtsSrncId">3GUrrUmtsSrncId</string>
    <string name="NetworkInfo_3GSlceEmPsDataRateStatusInd">3GSlceEmPsDataRateStatusInd</string>
    <string name="NetworkInfo_3GMemeEmInfoHServCellInd">3GMemeEmInfoHServCellInd</string>
    <string name="NetworkInfo_3GHandoverSequenceIndStuct">3GHandoverSequenceIndStuct</string>
    <string name="NetworkInfo_3GUl2EmAdmPoolStatusIndStruct">3GUl2EmAdmPoolStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmPsDataRateStatusIndStruct">3GUl2EmPsDataRateStatusIndStruct</string>
    <string name="NetworkInfo_3Gul2EmHsdschReconfigStatusIndStruct">3GUl2EmHsdschReconfigStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmUrlcEventStatusIndStruct">3GUl2EmUrlcEventStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmPeriodicBlerReportInd">3GUl2EmPeriodicBlerReportInd</string>
    <string name="NetworkInfo_xGCsceEMNeighCellSStatusInd">XGCsceEMNeighCellSStatusInd</string>
    <string name="AutoAnswer">AutoAnswer</string>
    <string name="YGPS">YGPS</string>
    <string name="AGPS">AGPS</string>
    <string name="Bluetooth">Bluetooth</string>
        <string name="audio_channel_adaptation">Audio Channel Adapt</string>
        <string name="video_channel_adaptation">Video Channel Adapt</string>
        <string name="video_channel_reverse_data_type">Video Channel Reverse Data Type</string>
        <string name="multiplex_level">Multiplex Level</string>
        <string name="video_codec_preference">Video Codec Preference</string>
        <string name="use_wnsrp">Use WNSRP</string>
        <string name="terminal_type">Terminal Type</string>
        <string name="set_working_mode">Working Mode</string>
        <string name="my3g324m_configuration">3G324M Configuration</string>
        <string name="auto_answer">Auto Answer</string>
        <string name="debug_message">Debug Message</string>
        <string name="log_to_file">Log to File</string>
        <string name="log_filter">Log Filter</string>
        <string name="log_filter_verbose">Verbose</string>
        <string name="log_filter_debug">Debug</string>
        <string name="log_filter_info">Info</string>
        <string name="log_filter_warning">Warning</string>
        <string name="log_filter_error">Error</string>
        <string name="log_filter_group_1">Group_1</string>
        <string name="log_filter_group_2">Group_2</string>
        <string name="log_filter_group_3">Group_3</string>
        <string name="log_filter_group_4">Group_4</string>
        <string name="log_filter_group_5">Group_5</string>
        <string name="log_filter_group_6">Group_6</string>
        <string name="log_filter_group_7">Group_7</string>
        <string name="log_filter_group_8">Group_8</string>
        <string name="log_filter_group_9">Group_9</string>
        <string name="log_filter_group_10">Group_10</string>
        <string name="h263_only">H263 only</string>
</resources>