<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
	
	<CheckBoxPreference
	  android:key="log_filter_tag_0"
  	  android:title="@string/log_filter_verbose"
  	  android:persistent="false">
	</CheckBoxPreference>  
	<CheckBoxPreference
	  android:key="log_filter_tag_1"
  	  android:title="@string/log_filter_debug"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_2"
  	  android:title="@string/log_filter_info"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_3"
  	  android:title="@string/log_filter_warning"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_4"
  	  android:title="@string/log_filter_error"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_5"
  	  android:title="@string/log_filter_group_1"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_6"
  	  android:title="@string/log_filter_group_2"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_7"
  	  android:title="@string/log_filter_group_3"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_8"
  	  android:title="@string/log_filter_group_4"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_9"
  	  android:title="@string/log_filter_group_5"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_10"
  	  android:title="@string/log_filter_group_6"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_11"
  	  android:title="@string/log_filter_group_7"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_12"
  	  android:title="@string/log_filter_group_8"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_13"
  	  android:title="@string/log_filter_group_9"
  	  android:persistent="false">
	</CheckBoxPreference>
	<CheckBoxPreference
	  android:key="log_filter_tag_14"
  	  android:title="@string/log_filter_group_10"
  	  android:persistent="false">
	</CheckBoxPreference>
	 
</PreferenceScreen>
