<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/Settings/assets/res/any/layout/battery_info.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout style="@style/info_layout">        

    <!-- Battery Status -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_status_label" style="@style/info_label" />
        <TextView android:id="@+id/status" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Level -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_level_label" style="@style/info_label" />
        <TextView android:id="@+id/level" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Scale -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_scale_label" style="@style/info_label" />
        <TextView android:id="@+id/scale" style="@style/info_value" />
    </LinearLayout>
    
    <!-- Battery Health -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_health_label" style="@style/info_label" />
        <TextView android:id="@+id/health" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Voltage -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_voltage_label" style="@style/info_label" />
        <TextView android:id="@+id/voltage" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Temperature -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_temperature_label" style="@style/info_label" />
        <TextView android:id="@+id/temperature" style="@style/info_value" />
    </LinearLayout>

    <!-- Battery Technology -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_technology_label" style="@style/info_label" />
        <TextView android:id="@+id/technology" style="@style/info_value" />
    </LinearLayout>

    <!-- Uptime -->
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_uptime" style="@style/info_label" />
        <TextView android:id="@+id/uptime" style="@style/info_value" />
    </LinearLayout>
    
    <!-- LogRecordTimeSetting -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:orientation="horizontal" android:layout_height="wrap_content">
    	<TextView android:text="@string/Log_Record_Interval" style="@style/info_label" />       
    	<EditText android:layout_height="wrap_content" android:layout_width="70dip" android:numeric="integer" android:text="@string/battery_info_10" android:id="@+id/Log_Record_Interval" android:singleLine="true"></EditText>
    	<TextView android:text="@string/battery_info_s" style="@style/info_label" android:paddingLeft="5dip"/>
	</LinearLayout>
    
    <!-- Log -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:orientation="horizontal" android:layout_height="wrap_content">
    	<TextView android:text="@string/battery_info_Log" style="@style/info_label" />
        <Button android:text="@string/battery_info_Log_Start" android:layout_width="80dip" android:layout_height="wrap_content" android:id="@+id/Log_Record"/>
    </LinearLayout>
    

</LinearLayout>
</ScrollView>
